--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1190,24 +1190,15 @@ select {
 .-mt-px {
   margin-top: -1px;
 }
-<<<<<<< Updated upstream
-=======
-.ml-auto {
-  margin-left: auto;
-}
->>>>>>> Stashed changes
 .mr-4 {
   margin-right: 1rem;
 }
 .mr-1 {
   margin-right: 0.25rem;
 }
-<<<<<<< Updated upstream
 .ml-auto {
   margin-left: auto;
 }
-=======
->>>>>>> Stashed changes
 .block {
   display: block;
 }
@@ -1259,6 +1250,9 @@ select {
 .h-full {
   height: 100%;
 }
+.h-3 {
+  height: 0.75rem;
+}
 .min-h-screen {
   min-height: 100vh;
 }
@@ -1307,21 +1301,15 @@ select {
 .w-20 {
   width: 5rem;
 }
-<<<<<<< Updated upstream
 .w-9\/12 {
   width: 75%;
 }
 .w-72 {
   width: 18rem;
 }
-=======
-.w-72 {
-  width: 18rem;
+.w-3 {
+  width: 0.75rem;
 }
-.w-9\/12 {
-  width: 75%;
-}
->>>>>>> Stashed changes
 .min-w-0 {
   min-width: 0px;
 }
@@ -1451,21 +1439,12 @@ select {
 .gap-1 {
   gap: 0.25rem;
 }
-<<<<<<< Updated upstream
 .gap-8 {
   gap: 2rem;
 }
 .gap-2 {
   gap: 0.5rem;
 }
-=======
-.gap-2 {
-  gap: 0.5rem;
-}
-.gap-8 {
-  gap: 2rem;
-}
->>>>>>> Stashed changes
 .space-x-8 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(2rem * var(--tw-space-x-reverse));
@@ -1601,9 +1580,21 @@ select {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
+.border-indigo-700 {
+  --tw-border-opacity: 1;
+  border-color: rgb(67 56 202 / var(--tw-border-opacity));
+}
 .border-b-blue-600 {
   --tw-border-opacity: 1;
   border-bottom-color: rgb(37 99 235 / var(--tw-border-opacity));
+}
+.border-b-gray-900 {
+  --tw-border-opacity: 1;
+  border-bottom-color: rgb(17 24 39 / var(--tw-border-opacity));
+}
+.border-b-indigo-700 {
+  --tw-border-opacity: 1;
+  border-bottom-color: rgb(67 56 202 / var(--tw-border-opacity));
 }
 .bg-white {
   --tw-bg-opacity: 1;
@@ -1653,13 +1644,10 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
-<<<<<<< Updated upstream
 .bg-blue-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(191 219 254 / var(--tw-bg-opacity));
 }
-=======
->>>>>>> Stashed changes
 .bg-blue-50 {
   --tw-bg-opacity: 1;
   background-color: rgb(239 246 255 / var(--tw-bg-opacity));
@@ -1676,13 +1664,6 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(254 242 242 / var(--tw-bg-opacity));
 }
-<<<<<<< Updated upstream
-=======
-.bg-blue-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(191 219 254 / var(--tw-bg-opacity));
-}
->>>>>>> Stashed changes
 .bg-opacity-25 {
   --tw-bg-opacity: 0.25;
 }
