add;route for linkstorage

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1068,11 +1068,11 @@ select {
 .z-50 {
   z-index: 50;
 }
-.z-40 {
-  z-index: 40;
-}
 .z-10 {
   z-index: 10;
+}
+.z-40 {
+  z-index: 40;
 }
 .order-last {
   order: 9999;
@@ -1173,6 +1173,9 @@ select {
 .ml-auto {
   margin-left: auto;
 }
+.ml-10 {
+  margin-left: 2.5rem;
+}
 .mr-8 {
   margin-right: 2rem;
 }
@@ -1181,9 +1184,6 @@ select {
 }
 .mr-1 {
   margin-right: 0.25rem;
-}
-.ml-10 {
-  margin-left: 2.5rem;
 }
 .mb-1 {
   margin-bottom: 0.25rem;
@@ -1462,6 +1462,9 @@ select {
 .whitespace-nowrap {
   white-space: nowrap;
 }
+.break-all {
+  word-break: break-all;
+}
 .rounded-md {
   border-radius: 0.375rem;
 }
@@ -1618,6 +1621,9 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(239 246 255 / var(--tw-bg-opacity));
 }
+.bg-transparent {
+  background-color: transparent;
+}
 .bg-gray-300 {
   --tw-bg-opacity: 1;
   background-color: rgb(209 213 219 / var(--tw-bg-opacity));
@@ -1625,9 +1631,6 @@ select {
 .bg-blue-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(191 219 254 / var(--tw-bg-opacity));
-}
-.bg-transparent {
-  background-color: transparent;
 }
 .bg-opacity-25 {
   --tw-bg-opacity: 0.25;
@@ -1765,11 +1768,11 @@ select {
 .pt-8 {
   padding-top: 2rem;
 }
-.pt-3 {
-  padding-top: 0.75rem;
-}
 .pl-12 {
   padding-left: 3rem;
+}
+.pt-3 {
+  padding-top: 0.75rem;
 }
 .text-left {
   text-align: left;
